# 8_churn_prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  inspect_data.py  pyproject.toml  requirements.txt  running_output.txt  technical_report.md
api/: main.py
configs/: config.yaml
notebooks/: 1_data_exploration.ipynb  2_professional_churn_eda.ipynb  3_advanced_eda_and_imbalance.ipynb  EDA.ipynb
scripts/: featurize.py  find_best_model.py  train.py
src/churn_predictor/: feature_engineering.py  model.py  schemas.py
src/churn_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py
