[project]
name = "churn-predictor"
version = "0.1.0"
description = "A production-ready customer churn prediction system."
authors = [{ name = "Senior ML Engineer" }]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
    "mlflow>=2.5.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "user-agents>=2.2.0",
    "imbalanced-learn>=0.11.0",
    "autogluon>=1.0.0"          
]


[project.optional-dependencies]
dev = [
    "ruff==0.1.6",
    "black==23.11.0",
    "pre-commit==3.5.0",
    "pytest==7.4.3",
    "httpx==0.25.1",
    "jupyter==1.0.0",
    "ipykernel"                 # <-- ADD THIS FOR JUPYTER
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "C", "B"]
ignore = ["B008"]

[tool.black]
line-length = 88
